# pyfmu

./: .gitignore  CMakeLists.txt  README.md  README_PyPI.md  build.py  conanfile.txt  conftest.py  copy_binaries_into_resources.py  functions.cpp  implementation_notes.md  issues.md  pytest.ini  sandbox.py  setup.py  test.py  todo.md  tox.ini
.github/workflows/: pythonapp.yml  pythonpublish.yml
RustFMU/: Cargo.toml  bindings.rs  test.md  wrapper.h
RustFMU/src/: lib.rs  run.rs
docs/: backends.rst  conf.py  configuration.rst  developer.rst  examples.rst  first_steps.rst  function_mappings.md  getting_started.rst  index.rst  installing.rst  interpreter_backend.md  refs.bib  usage.rst
docs/examples/: livePlotting.rst  sineGenerator.rst
docs/images/: pyfmu_mechanics.drawio  python_wrapper.drawio
examples/: .gitignore  export_all.py
examples/projects/Adder/: project.json
examples/projects/BicycleDriver/: project.json
examples/projects/BicycleDynamic/: project.json
examples/projects/BicycleKinematic/: project.json
examples/projects/BicycleTracking/: project.json
examples/projects/ConstantSignalGenerator/: project.json
examples/projects/FmiTypes/: project.json
examples/projects/LivePlotting/: project.json
examples/projects/LoggerFMU/: project.json
examples/projects/MyFMU/: project.json
examples/projects/SineGenerator/: project.json
examples/projects/SourceTwo/: project.json
examples/ssp/SumOfSines/: SystemStructure.ssd
pybuilder/: py2fmu.py
pybuilder/libs/builder/: export.py  generate.py  modelDescription.py  resources.py  utils.py  (+1 more)
pybuilder/resources/: locator.py
pyfmu_wrapper/: Cargo.toml  main.rs  slave_process.py  test.txt
pyfmu_wrapper/src/: common.rs  cpython_backend.bak  cpython_backend.rs  interpreter_backend.rs  lib.rs  utils.rs
pyfmu_wrapper/tests/: c_api.rs  examples.rs  tests.bak  tests.rs
python-builder/: configuration.json  generate.py  py2fmu.py  python-builder.py  python2fmu.py  test.xml  utils.py
python-builder/libs/: configure.py  export.py  generate.py  modelDescription.py  validate.py
python-builder/source/: pythonslave.py
pythonfmu-wrapper/: .gitignore  CMakeLists.txt  conanfile.txt  load.py  test_fmpy.py
pythonfmu-wrapper/examples/adder/resources/: adder.py  script_config.txt
pythonfmu-wrapper/examples/multiplier/: modelDescription.xml
pythonfmu-wrapper/examples/multiplier/resources/: multiplier.py  slave_configuration.json
pythonfmu-wrapper/examples/multiplier/resources/pyfmu/: fmi2slave.py
pythonfmu-wrapper/foo/: CMakeLists.txt  foo.cpp  foo.hpp
pythonfmu-wrapper/include/pythonfmu/: Logger.hpp  PyConfiguration.hpp  PyInitializer.hpp  PyObjectWrapper.hpp
pythonfmu-wrapper/include/utility/: py_compatability.hpp  utils.hpp
pythonfmu-wrapper/mylib/: CMakeLists.txt
pythonfmu-wrapper/mylib/include/: foo.hpp
pythonfmu-wrapper/mylib/src/: foo.cpp
pythonfmu-wrapper/pyfmuwrapper/: CMakeLists.txt
pythonfmu-wrapper/pyfmuwrapper/src/: PyObjectWrapper.cpp  thread_worker.cpp
pythonfmu-wrapper/resources/adder/: fmi2slave.py
pythonfmu-wrapper/src/: Logger.cpp  PyConfiguration.cpp  PyObjectWrapper.cpp  cppfmu_cs.cpp  fmi_functions.cpp  tests.cpp
pythonfmu-wrapper/src/utility/: utils.cpp
pythonfmu-wrapper/tests/: CMakeLists.txt
pythonfmu-wrapper/tests/examples/adder/resources/: adder.py
pythonfmu-wrapper/tests/resources/adder/: script_config.txt
pythonfmu-wrapper/tests/src/: main.cpp  tests.cpp  tests_bak.cpp
pythonfmu-wrapper/wrapper/: CMakeLists.txt
pythonfmu-wrapper/wrapper/include/cppfmu/: cppfmu_common.hpp
pythonfmu-wrapper/wrapper/include/fmi/: fmi2FunctionTypes.h
pythonfmu-wrapper/wrapper/include/pythonfmu/: Logger.hpp  PyConfiguration.hpp  PyException.hpp  PyGIL.hpp  PyInitializer.hpp  PyObjectWrapper.hpp  PyState.hpp
pythonfmu-wrapper/wrapper/include/utility/: utils.hpp
pythonfmu-wrapper/wrapper/src/: Logger.cpp  PyConfiguration.cpp  PyObjectWrapper.cpp  SlaveInstance.cpp  fmi_functions.cpp
src/pybuilder/: py2fmu.py  pyfmu.py
src/pyfmu/: config.py  pyfmu_cli.py  types.py  utils.py
tests/: test_builder.py  test_cli.py  test_context.py  test_cosim.py  test_examples.py  test_export.py  test_generate.py  test_slaveManager.py  test_utils.py  test_validation.py
tests/builder/: test_export.py  test_generate.py  test_model_description.py  test_resources.py  test_validation.py
tests/cosim/: BicycleDynamicAndDriver.j2  SumOfSines.j2  TrackingSimulator.j2  run.ps1
tests/dynamic/: test_cosimulation.py
tests/examples/: example_finder.py  examples.py  export_all.py  sandbox.py
tests/pyfmu/: test_fmi2slave.py  test_fmi2validation.py  test_fmi2variables.py  test_logging.py
tests/utils/: __init__.py  example_finder.py  export_all.py
tests/wrapper/: CMakeLists.txt
tests/wrapper/include/: example_finder.hpp  tmpdir.hpp
tests/wrapper/src/: example_finder.cpp  tests.cpp  tmpdir.cpp
uriparser/: CMakeLists.txt
wrapper/: CMakeLists.txt  load.py
wrapper/include/pyfmu/: Logger.hpp  PyConfiguration.hpp  PyException.hpp  PyGIL.hpp  PyObjectWrapper.hpp  common.hpp  fmi2Config.hpp  fmi2PySlave.hpp  fmi2PySlaveConfiguration.hpp  fmi2PySlaveLogging.hpp  pyCompatability.hpp  utils.hpp
wrapper/include/pyfmu/fmi2/: configuration.hpp  embeddedSlave.hpp  logging.hpp  slave.hpp  slaveAdapter.hpp  slaveFactory.hpp  slaveWrapper.hpp  slaveWrapperAdapter.hpp
wrapper/include/pyfmu/interpreter/: cPythonManager.hpp
wrapper/include/pythonfmu/: PyException.hpp  PyObjectWrapper.hpp
wrapper/include/spec/fmi2/: fmi2TypesPlatform.h
wrapper/include/utility/: utils.hpp
wrapper/src/: Logger.cpp  PyConfiguration.cpp  PyObjectWrapper.cpp  fmi2Functions.cpp  fmi2PySlave.cpp  fmi2PySlaveConfiguration.cpp  fmi_functions.cpp  utils.cpp
wrapper/src/fmi2/: configuration.cpp  embeddedSlave.cpp  functions.cpp  slaveAdapter.cpp  slaveFactory.cpp  slaveWrapper.cpp  slaveWrapperAdapter.cpp
wrapper/src/interpreter/: cPythonManager.cpp
wrapper/src/utility/: py_compatability.cpp  utils.cpp
wrapper/tests/include/: example_finder.hpp
wrapper/tests/src/: example_finder.cpp  tests.cpp
(+160 files in other folders)
