[package]
name = "pyfmu_wrapper"
version = "0.1.0"
authors = ["Christian Legaard <clegaard@outlook.com>"]
edition = "2018"

crate-type = ["rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
pyo3 = "0.10.1"
lazy_static = "*"
num_enum = "*"


[target.x86_64-apple-darwin]
# https://pyo3.rs/master/get_started.html
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]