[package]
name = "pyfmu_wrapper"
version = "0.1.0"
authors = ["Christian Møldrup Legaard <cml@eng.au.dk>"]
edition = "2018"

[lib]
name = "pyfmu"
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = "0.10.1"
lazy_static = "*"
num_enum = "*"
anyhow = "*"
libc = "*"