[package]
name = "pyfmu_wrapper"
version = "0.1.0"
authors = ["Christian Møldrup Legaard <cml@eng.au.dk>"]
edition = "2018"

[lib]
name = "pyfmu"
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# pyo3 = {git = "https://github.com/PyO3/pyo3.git"}
pyo3 = {git = "https://github.com/davidhewitt/pyo3.git", branch="once-cell"}

lazy_static = "*"
num_enum = "*"
anyhow = "*"
libc = "*"
byte-strings = "0.1.3"